--- a/TODOLIST.html
+++ b/TODOLIST.html
@@ -123,7 +123,7 @@
 <body>
     <div id="myDIV" class="header">
         <h2> Today's Plan</h2>
-        <input type="text" id="myInput" placeholder="今天要做什么呢...">
+        <input type="text" id="myInput" placeholder="well, I plan to...">
         <span onclick="newElement()" class="AddBtn"> Add</span>
     </div>
     <ul id="myUL">
