--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
 
     </section>
     <footer>
-        <a href="mailto:chen-sun@uiowa.edu" class="email-button"> Contract Me<br></a>
+        <a href="mailto:chen-sun@uiowa.edu" class="email-button"> Contact Me<br></a>
         <a href="TODOLIST.html"> This is mini todo list</a>
     </footer>
 
